# Turbulent-Flow-Simulations-with-HPC-Systems

./: CMakeLists.txt  README.md
.cache/clangd/index/: Assertion.cpp.EDBA4ACE9D1E37CB.idx  Assertion.hpp.445433827449372D.idx  BFInputStencils.cpp.6669BE36D9AC7E49.idx  BFInputStencils.hpp.873782CCF2C4B35E.idx  BFStepInitStencil.cpp.0AE958D37B0F6BB9.idx  BFStepInitStencil.hpp.6D773272C2CD2281.idx  BoundaryStencil.hpp.1B5B90B9B12A8C74.idx  BoundaryType.hpp.682261D688E8386A.idx  Clock.cpp.A33A8A80AA404F90.idx  Clock.hpp.75315883421345C1.idx  Configuration.cpp.2CD60BC1561038C4.idx  Configuration.hpp.3EB4E7D341E87702.idx  DataStructures.cpp.9ABF5C70EDB76FC2.idx  DataStructures.hpp.5E50E6B09337DB70.idx  Definitions.hpp.AEA270581678D0CB.idx  DerivativesTest.cpp.1A7EAC306636EDA2.idx  FGHStencil.cpp.8380474B247C8381.idx  FGHStencil.hpp.0EBFCB08BD35F29B.idx  FieldStencil.hpp.64A9D4BDF6E2C41B.idx  FlowField.cpp.28B02990D715E6FE.idx  FlowField.hpp.6A79A1DAD6267AB1.idx  FlowFieldTest.cpp.BBC4D15A57C35B28.idx  GlobalBoundaryFactory.cpp.77CC65F9850BD6A9.idx  GlobalBoundaryFactory.hpp.F54AA111709B61AF.idx  InitTaylorGreenFlowFieldStencil.cpp.D2DAF9C427B05EF0.idx  InitTaylorGreenFlowFieldStencil.hpp.5973C25FF6FE5C96.idx  Iterators.cpph.B07C16FB06210F5D.idx  Iterators.hpp.84FDBAC6088F06F5.idx  LinearSolver.cpp.F54A2D2FD3323771.idx  LinearSolver.hpp.5FE09988E4B23716.idx  Main.cpp.507FAF011C15DF3B.idx  MaxUStencil.cpp.FD7DE5C54A86485B.idx  MaxUStencil.hpp.DA5FF5A8FB808043.idx  Meshsize.cpp.CDEDF56C02CA5488.idx  Meshsize.hpp.4CC4BF12802FE399.idx  MeshsizeFactory.cpp.B1323713A5250A39.idx  MeshsizeFactory.hpp.468B18AD90757CA2.idx  (+40 more)
CMake/: Findspdlog.cmake  Findtinyxml2.cmake
Documentation/: Build-PETSc.tex  Extend-NS-EOF.tex  Overview-NS-EOF.tex
ExampleCases/: Cavity2D.xml  Cavity3D.xml  Cavity3D_1.xml  Cavity3D_10.xml  Cavity3D_11.xml  Cavity3D_12.xml  Cavity3D_13.xml  Cavity3D_14.xml  Cavity3D_15.xml  Cavity3D_16.xml  Cavity3D_17.xml  Cavity3D_18.xml  Cavity3D_19.xml  Cavity3D_2.xml  Cavity3D_3.xml  Cavity3D_4.xml  Cavity3D_5.xml  Cavity3D_6.xml  Cavity3D_7.xml  Cavity3D_8.xml  Cavity3D_9.xml  Channel2D.xml  Channel3D.xml  ChannelBackwardFacingStep2D.xml  ChannelBackwardFacingStep3D.xml
Source/: Assertion.hpp  CMakeLists.txt  Configuration.cpp  DataStructures.cpp  DataStructures.hpp  Definitions.hpp  FlowField.cpp  FlowField.hpp  GlobalBoundaryFactory.cpp  Iterators.cpph  Main.cpp  Meshsize.hpp  Parameters.cpp  Parameters.hpp  Simulation.cpp  Simulation.hpp  StdAfx.hpp  TurbulentFlowField.cpp  TurbulentFlowField.hpp  TurbulentSimulation.cpp  TurbulentSimulation.hpp
Source/ParallelManagers/: PetscParallelConfiguration.hpp  PetscParallelManager.cpp  PetscParallelManager.hpp
Source/Solvers/: PetscSolver.cpp
Source/Stencils/: BFInputStencils.cpp  BFStepInitStencil.hpp  FGHStencil.cpp  FGHStencil.hpp  InitBoundaryLayerThickness.cpp  InitBoundaryLayerThickness.hpp  InitWallDistanceStencil.cpp  InitWallDistanceStencil.hpp  MaxNuStencil.cpp  MaxNuStencil.hpp  PressureBufferFillStencil.cpp  PressureBufferFillStencil.hpp  PressureBufferReadStencil.cpp  PressureBufferReadStencil.hpp  RHSStencil.cpp  RHSStencil.hpp  StencilFunctions.hpp  TransportViscosityBufferFillStencil.cpp  TransportViscosityBufferFillStencil.hpp  TransportViscosityBufferReadStencil.cpp  TransportViscosityBufferReadStencil.hpp  TurbulentVTKStencil.cpp  TurbulentVTKStencil.hpp  TurbulentViscosityStencil.cpp  TurbulentViscosityStencil.hpp  VTKStencil.cpp  VTKStencil.hpp  VelocityBufferFillStencil.cpp  VelocityBufferFillStencil.hpp  VelocityBufferReadStencil.cpp  VelocityBufferReadStencil.hpp  ViscosityBufferFillStencil.cpp  ViscosityBufferFillStencil.hpp  ViscosityBufferReadStencil.cpp  ViscosityBufferReadStencil.hpp
Tests/: CMakeLists.txt  DerivativesTest.cpp  FlowFieldTest.cpp  ScalarFieldTest.cpp  VectorFieldTest.cpp
Tools/: Dockerfile  README.md  docker_recipe.py  petsc_commandline_arg
